--- a/appbase/bintrayUpload.gradle
+++ b/appbase/bintrayUpload.gradle
@@ -80,23 +80,24 @@ tasks.withType(Javadoc) {
     options.addStringOption('charSet', 'UTF-8')
 }
 
-//生成sources.jar
+// This generates sources.jar
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier = 'sources'
 }
 
+//This generates javadocJar.jar
 task javadoc(type: Javadoc) {
-    options.encoding = "UTF-8"
     source = android.sourceSets.main.java.srcDirs
+    classpath += configurations.compile
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
 }
 
-//生成javadoc.jar
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
+
 
 artifacts {
     archives javadocJar
