--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.findbugs:jsr305:3.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.0'
 }
 
 apply from: "bintrayUpload.gradle"
