--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0'
+    //Log
+    compile 'com.github.zhaokaiqiang.klog:library:1.5.0'
 }
 
 apply from: "bintrayUpload.gradle"
