--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'android-apt'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
@@ -50,6 +51,9 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0'
     //Log
     compile 'com.github.zhaokaiqiang.klog:library:1.5.0'
+
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
 apply from: "bintrayUpload.gradle"
