--- a/appbase/src/main/AndroidManifest.xml
+++ b/appbase/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.liang.appbaselibrary">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
