--- a/appbase/project.properties
+++ b/appbase/project.properties
@@ -4,7 +4,7 @@ project.repositoryName=Android
 #项目名称
 project.name=appbase
 #项目组id
-project.groupId=net.liang.better
+project.groupId=com.better.android
 #项目id,一般同project.name
 project.artifactId=appbase
 #打包类型
