--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'com.jfrog.bintray'
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
@@ -42,8 +43,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.6.4'
 
     compile 'io.reactivex.rxjava2:rxjava:2.0.0'
