--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -24,7 +24,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "0.1.4"
+        versionName "1.0.6"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -62,6 +62,11 @@ dependencies {
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
 
     compile 'org.greenrobot:eventbus:3.0.0'
+
+    compile 'com.github.GrenderG:Toasty:1.1.3'
+
+    //换肤
+    compile 'com.zhy:changeskin:4.0.2'
 }
 
 apply from: "bintrayUpload.gradle"
