--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Test_BaseRecyclerViewActivity" />
-        <activity android:name=".Test_BaseRecyclerViewFragment"></activity>
+        <activity android:name=".Test_BaseRecyclerViewFragment"/>
     </application>
 
 </manifest>
