--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -24,7 +24,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0.25"
+        versionName "1.0.27"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -66,7 +66,7 @@ dependencies {
     compile 'com.github.GrenderG:Toasty:1.1.3'
 
     //换肤
-    compile 'com.dino:changeskin:latest.integration'
+    compile 'com.dino:changeskin:1.2'
 }
 
 apply from: "bintrayUpload.gradle"
