支持网络状态更改提示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.liang.androidbaseapplication">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:name=".AppConfig"
         android:allowBackup="true"
@@ -19,6 +23,15 @@
         </activity>
         <activity android:name=".Test_BaseRecyclerViewActivity" />
         <activity android:name=".Test_BaseRecyclerViewFragment"/>
+
+        <receiver android:name="net.liang.appbaselibrary.NetWorkStateReceiver">
+            <intent-filter>
+                //检测网络变化的acton
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
