--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.liang.androidbaseapplication">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".AppConfig"
@@ -13,8 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,16 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Test_BaseRecyclerViewActivity" />
-        <activity android:name=".Test_BaseRecyclerViewFragment"/>
-
-        <receiver android:name="net.liang.appbaselibrary.NetWorkStateReceiver">
-            <intent-filter>
-                //检测网络变化的acton
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </receiver>
-
+        <activity android:name=".Test_BaseRecyclerViewFragment" />
+        <activity android:name=".NetRecyclerViewActivity"/>
     </application>
 
 </manifest>
