--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
+    //compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
