--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -28,7 +28,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.1.25"
+        versionName "1.1.30"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -53,8 +53,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
+    //compile 'com.android.support:appcompat-v7:25.3.0'
+    //compile 'com.android.support:design:25.3.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
 
     compile 'io.reactivex.rxjava2:rxjava:2.0.0'
