--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -28,7 +28,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "2.0.0"
+        versionName "2.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -57,8 +57,8 @@ dependencies {
     //compile 'com.android.support:design:25.3.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
 
-    compile 'io.reactivex.rxjava2:rxjava:2.0.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.+'
+    compile 'io.reactivex.rxjava2:rxandroid:2.+'
     //Log
     compile 'com.github.zhaokaiqiang.klog:library:1.5.0'
 
@@ -80,7 +80,7 @@ dependencies {
     compile 'com.github.GrenderG:Toasty:1.1.3'
 
     //换肤
-    compile 'com.dino:changeskin:1.9'
+//    compile 'com.dino:changeskin:1.9'
 }
 
 apply from: "bintrayUpload.gradle"
