--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,16 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //Jcenter仓库插件
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+
+        //lambda 支持
+        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
     }
 }
 
