多类型列表示例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,9 @@
         <activity android:name=".mvp.Test_BaseRecyclerViewFragment" />
         <activity android:name=".mvp.Test_NetRecyclerViewActivity" />
         <activity android:name=".mvp.daggernormal.Test_DaggerNormalActivity" />
-        <activity android:name=".mvp.daggerlist.Test_DaggerListActivity"></activity>
-        <activity android:name=".mvp.TestAnimActivity"></activity>
+        <activity android:name=".mvp.daggerlist.Test_DaggerListActivity" />
+        <activity android:name=".mvp.Test_AnimActivity" />
+        <activity android:name=".mvp.Test_MultiActivity"/>
     </application>
 
 </manifest>
