--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 
     compile 'com.github.GrenderG:Toasty:1.1.3'
 
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
     //换肤
 //    compile 'com.dino:changeskin:1.9'
 }
